Adding AddMobs working

--- a/TextToImageGonfyUiV2.csproj
+++ b/TextToImageGonfyUiV2.csproj
@@ -61,6 +61,7 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
+		<PackageReference Include="Plugin.AdMob" Version="2.3.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -75,6 +76,9 @@
 
 	<ItemGroup>
 	  <MauiXaml Update="Pages\3DPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\AdvertisementPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\Design.xaml">
