Adding setting page, only for admin. Change number for adds, checkpoint style

--- a/TextToImageGonfyUiV2.csproj
+++ b/TextToImageGonfyUiV2.csproj
@@ -114,6 +114,9 @@
 	  <MauiXaml Update="Pages\Photography.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\Settings.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\Vector.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
