--- a/TextToImageGonfyUiV2.csproj
+++ b/TextToImageGonfyUiV2.csproj
@@ -65,7 +65,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<EmbeddedResource Include="Resources\Raw\fooocus_styles.json" />
+	  <ProjectReference Include="..\TextToImageCore\TextToImageCore.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
